--- a/resources/dockerfileTemplates/Dockerfile-angular
+++ b/resources/dockerfileTemplates/Dockerfile-angular
@@ -1,16 +1,16 @@
 # Build stage
-FROM node:18-alpine AS builder
+FROM node:18.19.0-alpine3.19 AS builder
 WORKDIR /app
-COPY package.json package-lock.json ./
+COPY package*.json ./
 
-# First, install dependencies
-RUN npm install
+# Install dependencies
+RUN {{packageManager}} install
 
 # Copy all source files
 COPY . .
 
 # Run build
-RUN npm run build
+RUN {{packageManager}} run build
 
 # Check the actual build output structure
 RUN ls -la dist/ && \
@@ -36,23 +36,45 @@ RUN node -e "\
     console.log('Updated serve:ssr script to use:', serverPath);"
 
 # Production stage
-FROM node:18-alpine
+FROM node:18.19.0-alpine3.19
 WORKDIR /app
 
 # Copy package.json and build output
-COPY --from=builder /app/package.json /app/package-lock.json ./
+COPY --from=builder /app/package*.json ./
 COPY --from=builder /app/dist ./dist
 
 # Install production dependencies
-RUN npm install --production
-RUN npm install express
+RUN npm install --production && \
+    npm install express
+
+# Create non-root user
+RUN addgroup -g 1001 -S angular && \
+    adduser -S angular -u 1001 && \
+    chown -R angular:angular /app
+
+# Create inline healthcheck script
+RUN echo 'const http = require("http"); \
+const options = { host: "localhost", port: process.env.PORT || 4200, path: "/", timeout: 2000 }; \
+http.request(options, (res) => { process.exit(res.statusCode === 200 ? 0 : 1); }) \
+.on("error", () => { process.exit(1); }).end();' > /app/healthcheck.js && \
+    chown angular:angular /app/healthcheck.js
+
+# Switch to non-root user
+USER angular
 
 # Set environment variables
-ENV PORT=4200
+ENV PORT=4200 NODE_ENV=production
+
+# Expose port
 EXPOSE 4200
 
-# Display final configuration
-RUN echo "Final package.json contents:" && cat package.json && \
-    echo "\nAvailable files:" && ls -R dist/
+# Add healthcheck
+HEALTHCHECK --interval=30s --timeout=3s --start-period=15s --retries=3 \
+    CMD node /app/healthcheck.js || exit 1
+
+# Add labels for metadata
+LABEL maintainer="cloudinator" \
+      description="Angular SSR application" \
+      version="1.0"
 
 CMD ["npm", "run", "serve:ssr"]
