--- a/resources/dockerfileTemplates/Dockerfile-nextjs
+++ b/resources/dockerfileTemplates/Dockerfile-nextjs
@@ -1,27 +1,33 @@
 # Use an official Node.js runtime as a parent image
-FROM node:18-alpine AS builder
+FROM node:18.19.0-alpine3.19 AS builder
 RUN apk add --no-cache libc6-compat
 
 # Set the working directory to /app
 WORKDIR /app
 
 # Copy the package.json and package-lock.json files to the container
-COPY package.json package-lock.json ./
+COPY package*.json ./
+
 # Copy all other project files to working directory
 COPY . .
-RUN npm install -g {{packageManager}} 
-RUN npm install --legacy-peer-deps
-# if use Image
+
+# Install global package manager and dependencies
+RUN npm install -g {{packageManager}} && \
+    {{packageManager}} install --legacy-peer-deps
+
+# Install sharp for image optimization
 RUN {{packageManager}} i sharp --force
 
 # Run the next build process and generate the artifacts
 RUN {{packageManager}} run build
 
 # Multi-stage build process
-FROM node:18-alpine
-# update and install latest dependencies, add dumb-init package
-# add a non-root user
+FROM node:18.19.0-alpine3.19
+
+# Update and install latest dependencies, add dumb-init package
+# Add a non-root user
 RUN apk update && apk upgrade && apk add dumb-init && adduser -D nextuser
+
 # Set work dir as app
 WORKDIR /app
 
@@ -33,11 +39,31 @@ COPY --chown=nextuser:nextuser --from=builder /app/.next/standalone ./
 
 # Copy the static folder inside the .next folder generated from the build process
 COPY --chown=nextuser:nextuser --from=builder /app/.next/static ./.next/static
+
+# Copy healthcheck script
+RUN echo 'const http = require("http"); \
+const options = { host: "localhost", port: process.env.PORT || 3000, path: "/", timeout: 2000 }; \
+http.request(options, (res) => { process.exit(res.statusCode === 200 ? 0 : 1); }) \
+.on("error", () => { process.exit(1); }).end();' > /app/healthcheck.js && \
+    chown nextuser:nextuser /app/healthcheck.js
+
 # Set non-root user
 USER nextuser
 
+# Expose port
 EXPOSE 3000
 
+# Set environment variables
 ENV HOST=0.0.0.0 PORT=3000 NODE_ENV=production
+
+# Add healthcheck
+HEALTHCHECK --interval=30s --timeout=3s --start-period=15s --retries=3 \
+    CMD node /app/healthcheck.js || exit 1
+
+# Add labels for metadata
+LABEL maintainer="cloudinator" \
+      description="Next.js application" \
+      version="1.0"
+
 # Start the application
 CMD ["dumb-init","node","server.js"]
