--- a/resources/dockerfileTemplates/Dockerfile-springboot-maven
+++ b/resources/dockerfileTemplates/Dockerfile-springboot-maven
@@ -1,15 +1,48 @@
 # Builder stage
-FROM maven:3.8.6-openjdk-17-slim AS builder
+FROM maven:3.9.6-eclipse-temurin-17-alpine AS builder
 WORKDIR /app
 COPY . .
 # Note: Skipping tests is generally not recommended except for diagnostic purposes.
 RUN mvn clean package -DskipTests
 
 # Final stage
-FROM openjdk:17-alpine
+FROM eclipse-temurin:17.0.9_9-jre-alpine
 WORKDIR /app
+
+# Install wget for healthcheck
+RUN apk add --no-cache wget
+
+# Create non-root user
+RUN addgroup -g 1001 -S spring && \
+    adduser -S spring -u 1001 -G spring
+
 # Copy the built JAR from the builder stage and rename it for simplicity
-COPY --from=builder /app/target/*.jar app.jar
+COPY --from=builder --chown=spring:spring /app/target/*.jar app.jar
+
+# Create healthcheck script
+RUN echo '#!/bin/sh' > /app/healthcheck.sh && \
+    echo 'wget --no-verbose --tries=1 --spider --timeout=2 "http://localhost:${PORT:-8080}${HEALTH_ENDPOINT:-/actuator/health}" 2>&1' >> /app/healthcheck.sh && \
+    echo 'exit $?' >> /app/healthcheck.sh && \
+    chmod +x /app/healthcheck.sh && \
+    chown spring:spring /app/healthcheck.sh
+
+# Switch to non-root user
+USER spring
+
+# Environment variables
+ENV PORT=8080
+
+# Expose port
 EXPOSE 8080
+
+# Add healthcheck
+HEALTHCHECK --interval=30s --timeout=3s --start-period=30s --retries=3 \
+    CMD /app/healthcheck.sh || exit 1
+
+# Add labels for metadata
+LABEL maintainer="cloudinator" \
+      description="Spring Boot application (Maven)" \
+      version="1.0"
+
 # Now you can reference a fixed name in the ENTRYPOINT
 ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=prod", "app.jar"]
